# image-processing-lib

./: CMakeLists.txt  README.md
examples/: demo.cpp
include/: filters.hpp  image.hpp
src/: filters.cpp  image.cpp
